--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,23 +4,9 @@ on:
   workflow_dispatch:
 
 jobs:
-
-  test:
-    name: Unit-Test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Maven Package
-        run: mvn -B clean package
-      - name: Maven Verify
-        run: mvn -B clean verify -DskipTests
         
-  sonar:
-    name: Code-Quality Check
+  build:
+    name: Build / Unit Test / Sonar
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
