--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
   test:
     name: Unit-Test
     runs-on: ubuntu-latest
+    needs: [build]
     steps:
       - uses: actions/checkout@v1
       - name: Set up JDK
@@ -34,6 +35,7 @@ jobs:
   sonar:
     name: Sonar
     runs-on: ubuntu-latest
+    needs: [build, test]
     steps:
       - uses: actions/checkout@v2
         with:
