--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,10 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
 				<configuration>
-					<argLine>-Dfile.encoding=UTF-8</argLine>
+					<forkMode>once</forkMode>
+					<forkCount>1</forkCount>
+					<argLine>@{argLine} -Xmx1024m -Dfile.encoding=UTF-8</argLine>
+					<reuseForks>false</reuseForks>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -88,13 +91,14 @@
 				<version>0.8.5</version>
 				<executions>
 					<execution>
-						<id>prepare-agent</id>
+						<id>default-prepare-agent</id>
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
 					</execution>
 					<execution>
-						<id>report</id>
+						<id>jacoco-site</id>
+						<phase>test</phase>
 						<goals>
 							<goal>report</goal>
 						</goals>
