--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 				<configuration>
 					<forkMode>once</forkMode>
 					<forkCount>1</forkCount>
-					<argLine>@{argLine} -Xmx1024m -Dfile.encoding=UTF-8</argLine>
+					<argLine>@{jaCoCoArgLine} -Xmx1024m -Dfile.encoding=UTF-8</argLine>
 					<reuseForks>false</reuseForks>
 				</configuration>
 			</plugin>
@@ -95,6 +95,9 @@
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
+						<configuration>
+							<propertyName>jaCoCoArgLine</propertyName>
+						</configuration>
 					</execution>
 					<execution>
 						<id>jacoco-site</id>
