attempt to fix DNS error

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,9 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+					<jvmArguments>
+						-Dcom.sun.jndi.ldap.object.disableEndpointIdentification=true
+					</jvmArguments>
 				</configuration>
 			</plugin>
 			<plugin>
