--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,7 +7,7 @@ jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v1
       - name: Set up JDK
@@ -21,7 +21,7 @@ jobs:
 
   test:
     name: Unit-Test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     needs: [build]
     steps:
       - uses: actions/checkout@v1
@@ -33,7 +33,7 @@ jobs:
         run: mvn -B clean test
 
   docker:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     name: Publish to Docker
     needs: [build, test]
     steps:
