--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
+          distribution: 'oracle'
           java-version: 11
       - name: Maven Package
         run: mvn -B clean package -DskipTests
@@ -28,6 +29,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
+          distribution: 'oracle'
           java-version: 11
       - name: Maven Package
         run: mvn -B clean test
@@ -43,6 +45,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
+          distribution: 'oracle'
           java-version: 11
 
       - name: Maven Package
