--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -65,11 +65,13 @@ jobs:
 
       - name: Get current date
         id: getDate
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+        #run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
 
       - name: Get semantic version from file
         id: getSemver
-        run: echo "::set-output name=semver::$(cat VERSION | tr -d ' \t\n\r' )"
+        #run: echo "::set-output name=semver::$(cat VERSION | tr -d ' \t\n\r' )"
+        run: echo "semver=$(cat VERSION | tr -d ' \t\n\r' )" >> $GITHUB_OUTPUT
 
       - name: Build and push
         uses: docker/build-push-action@v3
